--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.9.0",
     "mongoose": "^4.0.1",
     "morgan": "~1.3.0",
+    "request": "^2.54.0",
     "serve-favicon": "~2.1.3"
   }
 }
